add tags meta description, autor

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>PixelPerfecto</title>
+    <meta name="author" content="Daniel Gualtero">
+    <meta name="description" content="Remueve el bg de tu imagen facil rapido y gratis. ¿Que esperas para utilizarlo?">
   </head>
   <body>
     <div id="root"></div>
